--- a/build_all/base-libraries/AzureIoTProtocol_HTTP/library.properties
+++ b/build_all/base-libraries/AzureIoTProtocol_HTTP/library.properties
@@ -6,4 +6,4 @@ sentence=Azure HTTP protocol library for Arduino. For the Arduino MKR1000 or Zer
 paragraph=Microsoft compact implementation of the HTTP protocol for small devices like Arduino. It allows you to use your Arduino with the Azure IoT Hub using HTTP as the transport protocol.  See readme.md for more details.  Copyright (c) Microsoft. All rights reserved.  Licensed under the MIT license. See LICENSE file in the project root for full license information.
 category=Communication
 url=https://github.com/Azure/azure-iot-arduino-protocol-http
-architectures=samd,esp8266
+architectures=samd,esp8266,esp32
