--- a/build_all/base-libraries/AzureIoTProtocol_MQTT/library.properties
+++ b/build_all/base-libraries/AzureIoTProtocol_MQTT/library.properties
@@ -6,4 +6,4 @@ sentence=Azure MQTT protocol library for Arduino. For the Arduino MKR1000 or Zer
 paragraph=Microsoft compact implementation of the MQTT protocol for small devices like Arduino. It allows you to use your Arduino with the Azure IoT Hub using MQTT as the transport protocol.  See readme.md for more details.
 category=Communication
 url=https://github.com/Azure/azure-iot-arduino-protocol-mqtt
-architectures=samd,esp8266
+architectures=samd,esp8266,esp32
