--- a/build_all/base-libraries/AzureIoTUtility/library.properties
+++ b/build_all/base-libraries/AzureIoTUtility/library.properties
@@ -6,4 +6,4 @@ sentence=Azure C shared utility library for Arduino. For the Arduino MKR1000 or 
 paragraph=Microsoft port of the Azure C Shared Utility. Together with AzureIoTHub, it allows you to use your Arduino with the Azure IoT Hub.  See readme.md for more details.  Copyright (c) Microsoft. All rights reserved.  Licensed under the MIT license. See LICENSE file in the project root for full license information.
 category=Communication
 url=https://github.com/Azure/azure-iot-arduino-utility
-architectures=samd,esp8266
+architectures=samd,esp8266,esp32
