Add additional socket adapters and MbedTLS submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sdk"]
 	path = sdk
 	url = https://github.com/Azure/azure-iot-sdk-c.git
+[submodule "pal/mbedtls"]
+	path = pal/mbedtls
+	url = https://github.com/ARMmbed/mbedtls
