--- a/build_all/base-libraries/AzureIoTSocket_WiFi/library.properties
+++ b/build_all/base-libraries/AzureIoTSocket_WiFi/library.properties
@@ -6,4 +6,4 @@ sentence=Azure IoT network adapter layer for use with Wi-Fi such as ESP32 or ESP
 paragraph=Microsoft Wi-Fi adaptation layer for connection to an IoT hub. Together with AzureIoTHub, it allows you to use your Arduino with the Azure IoT Hub.  See readme.md for more details.  Copyright (c) Microsoft. All rights reserved.  Licensed under the MIT license. See LICENSE file in the project root for full license information.
 category=Communication
 url=https://github.com/Azure/azure-iot-arduino-socket-wifi
-architectures=samd,esp8266,esp32
+architectures=samd,esp32
