Add support for esp8266 (#7)
* Add additional socket adapters and MbedTLS submodule

* Fix a couple of minor compiler warnings.

* add esp8266 telemetry_sample.c.ino and update make_sdk.cmd to add files as needed

* Update to make_sdk.cmd to remove blob.* files not used, but compiled anyway.

* Remove more esp8266 specific code from main telemetry sample file.

* Update AzureIoTHub.h

* Update AzureIoTUtility.h

* Update sample_init.cpp

* tabs + k => connect_success

* Update README.md

* Update AzureIoTProtocol_MQTT.h

* Update AzureIoTProtocol_HTTP.h

* Update platform_arduino_requirements.md

* Update IoTHub README to indicate new setup steps.

* Update socketio_esp32ethernet2.cpp

* Update make_sdk.cmd to allow different build of AzureIoTUtility which does not include mbedtls when using the argument esp8266

* __FAILURE__ -> MU_FAILURE

* Removed commented out code.

* Updates to esp32 code based on @hihigupt comments to PR 7.

* fix result for socketio_send in esp32 wifi, remove unneccessary copy of mbedtls to Utility library as mbedtls implementation is in the board package.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "pal/mbedtls"]
+	path = pal/mbedtls
+	url = https://github.com/ARMmbed/mbedtls
 [submodule "sdk"]
 	path = sdk
-	url = https://github.com/Azure/azure-iot-sdk-c.git
+	url = https://github.com/Azure/azure-iot-sdk-c
