--- a/build_all/base-libraries/AzureIoTHub/library.properties
+++ b/build_all/base-libraries/AzureIoTHub/library.properties
@@ -6,4 +6,4 @@ sentence=Azure IoT library for Arduino. For the Arduino MKR1000 or Zero and WiFi
 paragraph=Arduino port of the Azure IoT C device SDK. It allows you to use your Arduino with the Azure IoT Hub.  See readme.md for more details.  Copyright (c) Microsoft. All rights reserved.  Licensed under the MIT license. See LICENSE file in the project root for full license information.
 category=Communication
 url=https://github.com/Azure/azure-iot-arduino
-architectures=samd,esp8266,esp32
+architectures=esp8266,esp32
