--- a/build_all/base-libraries/AzureIoTHub/library.properties
+++ b/build_all/base-libraries/AzureIoTHub/library.properties
@@ -7,3 +7,4 @@ paragraph=Arduino port of the Azure IoT C device SDK. It allows you to use your 
 category=Communication
 url=https://github.com/Azure/azure-iot-arduino
 architectures=esp8266,esp32
+includes=AzureIoTHub.h
